.metadata/.plugins/org.eclipse.cdt.ui/9244.build.log
20:12:33 **** Build of configuration Debug for project 9244 ****
make all 
Building file: ../src/9244.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/9244.d" -MT"src/9244.o" -o "src/9244.o" "../src/9244.cpp"
../src/9244.cpp:47:29: error: a space is required between consecutive right angle brackets (use '> >')
map<int, priority_queue<Info>> arr;
                            ^~
                            > >
../src/9244.cpp:58:9: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
    for(auto a : lines){
        ^
../src/9244.cpp:58:16: warning: range-based for loop is a C++11 extension [-Wc++11-extensions]
    for(auto a : lines){
               ^
2 warnings and 1 error generated.
make: *** [src/9244.o] Error 1

20:12:33 Build Finished (took 482ms)

